--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Adventure</title>
-	<link rel="stylesheet" href="css/style.min.css?_v=20230711175627">
+	<link rel="stylesheet" href="css/style.min.css">
 	<!-- &display=swap -->
-	<script src="js/app.min.js?_v=20230711175627" defer></script>
+	<script src="js/app.min.js" defer></script>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
 					<div class="section_1__item _active">
 						
 						<div class="section_1__background ibg">
-							<picture><source srcset="img/section_1/bacground__image_01.webp" type="image/webp"><img src="img/section_1/bacground__image_01.jpg" alt=""></picture>
+							<img src="img/section_1/bacground__image_01.jpg" alt="">
 						</div>
 						<div class="section_1__text">
 							<h2 class="section_1__title">ZIC</h2>
@@ -42,7 +42,7 @@
 					</div>
 					<div class="section_1__item">
 						<div class="section_1__background ibg">
-							<picture><source srcset="img/section_1/bacground__image_02.webp" type="image/webp"><img src="img/section_1/bacground__image_02.jpg" alt=""></picture>
+							<img src="img/section_1/bacground__image_02.jpg" alt="">
 						</div>
 						<div class="section_1__text">
 							<h2 class="section_1__title">toyota rav4</h2>
@@ -51,7 +51,7 @@
 					</div>
 					<div class="section_1__item _prev-section">
 						<div class="section_1__background ibg">
-							<picture><source srcset="img/section_1/bacground__image_03.webp" type="image/webp"><img src="img/section_1/bacground__image_03.jpg" alt=""></picture>
+							<img src="img/section_1/bacground__image_03.jpg" alt="">
 						</div>
 						<div class="section_1__text">
 							<h2 class="section_1__title">experiantial retail</h2>
@@ -65,10 +65,10 @@
 					<div class="section_2__item sub-section">
 						<div class="section_2__background-box">
 							<div class="section_2__background sub-item _active ibg">
-								<picture><source srcset="img/section_2/section_2__background_01.webp" type="image/webp"><img src="img/section_2/section_2__background_01.jpg" alt=""></picture>
+								<img src="img/section_2/section_2__background_01.jpg" alt="">
 							</div>
 							<div class="section_2__background sub-item sub-item-next ibg">
-								<picture><source srcset="img/section_2/section_2__background_03.webp" type="image/webp"><img src="img/section_2/section_2__background_03.jpg" alt=""></picture>
+								<img src="img/section_2/section_2__background_03.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -87,7 +87,7 @@
 						</div>
 						<div class="section_2__background-box">
 							<div class="section_2__background ibg">
-								<picture><source srcset="img/section_2/section_2__background_02.webp" type="image/webp"><img src="img/section_2/section_2__background_02.jpg" alt=""></picture>
+								<img src="img/section_2/section_2__background_02.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -115,7 +115,7 @@
 					<div class="section_3__item sub-section sub-section-two">
 						<div class="section_3__background-box">
 							<div class="section_3__background sub-item _active ibg">
-								<picture><source srcset="img/section_3/Section_3__image_01.webp" type="image/webp"><img src="img/section_3/Section_3__image_01.jpg" alt=""></picture>
+								<img src="img/section_3/Section_3__image_01.jpg" alt="">
 							</div>
 							<div class="section_3__background section_3__half-section sub-item-next sub-item">
 								<div class="section_3__background-box">
@@ -139,7 +139,7 @@
 				<div class="section_4__items">
 					<div class="section_4__item sub-section">
 						<div class="section_4__background ibg sub-item _active">
-							<picture><source srcset="img/section_4/section_4__background_01.webp" type="image/webp"><img src="img/section_4/section_4__background_01.jpg" alt=""></picture>
+							<img src="img/section_4/section_4__background_01.jpg" alt="">
 						</div>
 						<div class="section_4__texts text-block sub-item sub-item-up ">
 							<div class="section_4__text section_4__text-pink text-block__item">
@@ -149,7 +149,7 @@
 							</div>
 						</div>
 						<div class="section_4__background ibg sub-item sub-item-left">
-							<picture><source srcset="img/section_4/section_4__background_03.webp" type="image/webp"><img src="img/section_4/section_4__background_03.jpg" alt=""></picture>
+							<img src="img/section_4/section_4__background_03.jpg" alt="">
 						</div>
 						<div class="section_4__texts text-block sub-item sub-item-down">
 							<div class="section_4__text section_4__text-orange text-block__item">
@@ -170,7 +170,7 @@
 							</div>
 						</div>
 						<div class="section_4__background ibg sub-item sub-item-down">
-							<picture><source srcset="img/section_4/section_4__background_02.webp" type="image/webp"><img src="img/section_4/section_4__background_02.jpg" alt=""></picture>
+							<img src="img/section_4/section_4__background_02.jpg" alt="">
 						</div>
 						<div class="section_4__texts text-block sub-item sub-item-right">
 							<div class="section_4__text section_4__text-black text-block__item">
@@ -197,31 +197,31 @@
 							</div>
 							<div class="section_5__background-box">
 								<div class="section_5__background ibg">
-									<picture><source srcset="img/section_5/section_5__background_01.webp" type="image/webp"><img src="img/section_5/section_5__background_01.jpg" alt=""></picture>
+									<img src="img/section_5/section_5__background_01.jpg" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="section_5__row sub-item">
 							<div class="section_5__background-box">
 								<div class="section_5__background ibg">
-									<picture><source srcset="img/section_5/section_5__background_03.webp" type="image/webp"><img src="img/section_5/section_5__background_03.jpg" alt=""></picture>
+									<img src="img/section_5/section_5__background_03.jpg" alt="">
 								</div>
 							</div>
 							<div class="section_5__background-box">
 								<div class="section_5__background ibg">
-									<picture><source srcset="img/section_5/section_5__background_04.webp" type="image/webp"><img src="img/section_5/section_5__background_04.jpg" alt=""></picture>
+									<img src="img/section_5/section_5__background_04.jpg" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="section_5__row sub-item">
 							<div class="section_5__background-box">
 								<div class="section_5__background ibg">
-									<picture><source srcset="img/section_5/section_5__background_06.webp" type="image/webp"><img src="img/section_5/section_5__background_06.jpg" alt=""></picture>
+									<img src="img/section_5/section_5__background_06.jpg" alt="">
 								</div>
 							</div>
 							<div class="section_5__background-box">
 								<div class="section_5__background ibg">
-									<picture><source srcset="img/section_5/section_5__background_07.webp" type="image/webp"><img src="img/section_5/section_5__background_07.jpg" alt=""></picture>
+									<img src="img/section_5/section_5__background_07.jpg" alt="">
 								</div>
 							</div>
 						</div>
@@ -239,7 +239,7 @@
 							</div>
 							<div class="section_5__background-box">
 								<div class="section_5__background">
-									<picture><source srcset="img/section_5/section_5__background_02.webp" type="image/webp"><img src="img/section_5/section_5__background_02.jpg" alt=""></picture>
+									<img src="img/section_5/section_5__background_02.jpg" alt="">
 								</div>
 							</div>
 						</div>
@@ -255,7 +255,7 @@
 							</div>
 							<div class="section_5__background-box">
 								<div class="section_5__background">
-									<picture><source srcset="img/section_5/section_5__background_05.webp" type="image/webp"><img src="img/section_5/section_5__background_05.jpg" alt=""></picture>
+									<img src="img/section_5/section_5__background_05.jpg" alt="">
 								</div>
 							</div>
 						</div>
@@ -270,7 +270,7 @@
 							</div>
 							<div class="section_5__background-box">
 								<div class="section_5__background">
-									<picture><source srcset="img/section_5/section_5__background_08.webp" type="image/webp"><img src="img/section_5/section_5__background_08.jpg" alt=""></picture>
+									<img src="img/section_5/section_5__background_08.jpg" alt="">
 								</div>
 							</div>
 						</div>
@@ -281,7 +281,7 @@
 				<div class="section_6__items">
 					<div class="section_6__item">
 						<div class="section_6__background ibg">
-							<picture><source srcset="img/section_6/section_6__background_01.webp" type="image/webp"><img src="img/section_6/section_6__background_01.jpg" alt=""></picture>
+							<img src="img/section_6/section_6__background_01.jpg" alt="">
 						</div>
 					</div>
 					<div class="section_6__item section_6__item-two">
